@@ -46,7 +46,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<form id="login_form" name="login_form" method="post">
 			<table id="login_form_inputs">
 				<tr>
-					<td id="profile_user_info_box" rowspan="8">
+					<td id="profile_user_info_box" rowspan="9">
 						<div id="profile_avatar">
 							<img width="50" height="50" src="{{ request.user.get_profile.avatar }}" title="avatar of {{ request.user.username }}">
 						</div>
